# Projet_PSE

PSE/TP1/: Makefile  exercice1  exercice1.c  exercice2  exercice2.c
PSE/TP2/: Makefile  client  client.c  exercice1  exercice1.c  exercice2.c  serveur
PSE/TP3/: Makefile  cli  client  client.c  serveur  serveur.c  srv
PSE/TP4/: Makefile  TP4-C.tar  multi_son  multi_son.c
PSE/TP4/TP4-C/: F1.c  F2.c  Makefile  exercice1_A.c  exercice1_B.c  exercice2.c
PSE/TP5/: Makefile  client.c  exercice1  exercice1.c
PSE/TP6/: Makefile  TP5-C.tar  client  client.c  exercice1.c  previous_serveur.c  serveur  serveur.c
PSE/TP6/TP5-C/: Makefile  client.c  exercice2.c  exercice3.c  serveur.c
PSE/TP7/: Makefile  client  exercice1  exercice1.c  serveur  serveur.c
PSE/TP8/: Makefile  tampon.c
PSE/exemples/: fichiers.c  slide036.c  slide046.c  slide047.c  slide048.c  slide049.c  slide050.c  slide088_calcul.c  slide099.c
PSE/include/: dataspec.h  resolv.h
PSE/projet/: Makefile  client.c  main.c  serveur.c
Projet/: CMakeLists.txt  client.c  game.c  game.h  gameStructs.h  main.c  serveur.c
Projet/include/: dataspec.h  pse.h
TP7-C/: Makefile  client.c  exercice1.c  exercice2.c  serveur.c
TP8-C/: prodcons.c  tampon.c  tampon.h
